<resources>
    // App y activities
    <string name="app_name">Wine Smeller</string>
    <string name="activityTitle_auth">Autenticación</string>
    <string name="activityTitle_signUp">Nuevo Registro</string>
    <string name="activityTitle_passwordForgotten">Recupere su contraseña</string>
    <string name="activityTitle_mainMenu">Menú Principal</string>

    // EditTextHints - etHint
    <string name="etHint_email">Email</string>
    <string name="etHint_password">Contraseña</string>
    <string name="etHint_newPassword">Nueva contraseña</string>
    <string name="etHint_repeatNewPassword">Confirme contraseña</string>
    <string name="etHint_barToCode">_</string>

    // TextButton - tButton
    <string name="tButton_signUpEnter">Regístrese aquí!</string>
    <string name="tButton_forgottenPassword">¿Ha olvidado su contraseña?</string>
    <string name="tButton_login">Acceder</string>
    <string name="tButton_sendCode">Enviar código</string>
    <string name="tButton_validCode">Validar código</string>
    <string name="tButton_confirm">Confirmar</string>
    <string name="tButton_sendAgain">Volver a enviar</string>

    // TextView - tv
    <string name="tv_signUpCuestion">¿No está registrado?</string>
    <string name="tv_enterEmail">Introduzca su correo:</string>
    <string name="tv_codeSend">Se le ha enviado el código de recuperación de contraseña a su correo.</string>
    <string name="tv_codeSendNewRegister">Se ha enviado un código de confirmación a su correo.
        Introduzca el código para terminar su registro.</string>
    <string name="tv_enterPassword">Introduzca contraseña:</string>
    <string name="tv_newPassword">Introduzca su nueva contraseña:</string>
    <string name="tv_confirmNewPassword">Confirme su nueva contraseña:</string>

    // TextCheckBox - tCheckBox
    <string name="tCheckBox_savingCredentials">Guardar sesión</string>

    // Descriptions
    <string name="description_WS_loginScreen">Icono WS para animación en pantalla de login</string>
    <string name="description_WINESMELLER_loginScreen">Título WINESMELLER para animación en pantalla de login</string>
    <string name="description_WINESMELLER_mainMenuScreen_button1">Botón "+" para su posterior uso</string>
    <string name="description_forgottenPassword_spacesCode">Utiliza para crear espacios entre imágenes</string>

    // Acciones del menú
    <string name="title_optionMenu_settings">Ajustes</string>
    <string name="title_optionMenu_closeSession">Cerrar sesión</string>
    <string name="menu_board">Cartel</string>
    <string name="menu_addWine">Uno Más</string>
    <string name="menu_yourWinery">Tu Bodega</string>
    <string name="menu_search">Buscador</string>
    <string name="menu_foro">Foro</string>
    <string name="menu_scanner">Escáner</string>
    <string name="menu_cataNotes">Nota de catas</string>

    // Mensajes - Toasts
    <string name="toast_invalidEmail">El formato del correo no es válido</string>
    <string name="toast_passwordAndConfirmDiff">La contraseña y su confirmación no coinciden</string>
    <string name="toast_emailAlreadyExists">El usuario ya está registrado en nuestra Base de Datos</string>
    <string name="toast_emailNoExists">El correo indicado no se encuentra registrado en nuestra Base de Datos</string>
    <string name="toast_codeSend">Código enviado</string>
    <string name="toast_voidSomeData">Alguno de los datos no ha sido rellenado</string>
    <string name="toast_wrongCodeEntered">Código erróneo</string>
    <string name="toast_errorFailedRegistration">Registro fallido</string>
    <string name="toast_registerCompleted">Gracias por registrarse</string>
    <string name="toast_maxNumOfAttempts">Se han consumido el máximo número de intentos</string>

    // Mensajes para Correos
    <string name="email_titleRegistrationMail">Confirmación de correo electrónico</string>
    <string name="email_titlePasswordForgotten">Cambio de contraseña</string>
    <string name="email_bodyRegistrationMail01">Gracias por elegir WineSmeller.\nPara activar su cuenta y así completar su registro es necesario que introduzca el código que se le envía en este correo.\n\n</string>
    <string name="email_bodyPasswordForgottenMail01">Hola,\nEl siguiente código le permitirá cambiar su contraseña:\n\n</string>
    <string name="email_bodyGeneralMail01">Gracias de parte del equipo de WineSmeller,\nUn saludo.\n\n</string>
    <string name="email_bodyGeneralMail02">Por favor, no conteste a este correo.</string>

    // Otros
    <string name="nombrePerfil">Cristiano Ronaldo</string>
    <string name="emailPerfil">winesmeller@gmail.com</string>
    <string name="preference_file_key">com.project.winesmeller.PREFERENCE_FILE_KEY</string> // Shared File

</resources>